--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -113,9 +113,74 @@
 @layer base {
   * {
     @apply border-border outline-ring/50;
+    scrollbar-width: none;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+  }
+  ::-webkit-scrollbar-thumb {
+    background: transparent;
+  }
+  *::-webkit-scrollbar {
+    display: none;
+  }
+  ::-webkit-scrollbar {
+    display: none;
   }
   body {
     font-family: var(--font-Poppins), sans-serif;
     @apply bg-background text-foreground;
   }
+}
+
+.fc {
+  --fc-border-color: #e5e7eb;
+  --fc-today-bg-color: #f0f9ff;
+}
+
+.fc-col-header-cell {
+  height: 40px;
+  border-color: var(--fc-border-color);
+}
+
+.fc-col-header-cell-cushion {
+  display: inline-block;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  line-height: 40px;
+  font-weight: 500;
+  font-size: 13px;
+  color: #60696b;
+}
+
+.fc-timegrid-slot {
+  height: 120px !important;
+}
+
+.fc-timegrid-slot-label {
+  font-size: 12px;
+  color: #60696b;
+  height: 100%;
+  background: white;
+  border: none !important;
+}
+
+.fc-timegrid-slot-label span {
+  display: block;
+  width: 100%;
+  text-align: bottom;
+}
+
+.fc-scrollgrid {
+  border-left: none !important;
+}
+
+.fc-timegrid-col {
+  border-color: var(--fc-border-color);
+}
+
+.fc-timegrid-body,
+.fc-scrollgrid-sync-table,
+.fc-scrollgrid {
+  background-color: #f9f9f9;
 }
